modularui in large weapon inventory